--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
 import HeadLayout from "./HeadLayout.astro";
 ---
@@ -10,5 +11,6 @@ import HeadLayout from "./HeadLayout.astro";
     <main>
       <slot>Default Text</slot>
     </main>
+    <Footer />
   </body>
 </html>
