--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,7 @@
 :root {
   /* color list  */
   --clr-blue: 215, 43%, 13%;
+  --clr-blue-400: 214, 45%, 11%;
   --clr-grey: 32, 100%, 88%;
   --clr-red: 349, 57%, 48%;
   --clr-green: 185, 51%, 25%;
