--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -11,7 +11,17 @@ const { title } = Astro.props;
     font-family: var(--font-secondary);
     line-height: var(--fs-3xl);
     text-transform: uppercase;
-    font-weight: 400;
+
     text-align: center;
+    width: 80%;
+    margin-inline: auto;
+    font-weight: 400;
+  }
+
+  @media (max-width: 600px) {
+    .title {
+      font-size: 38px;
+      line-height: 38px;
+    }
   }
 </style>
