--- a/src/layouts/HeroLayout.astro
+++ b/src/layouts/HeroLayout.astro
@@ -73,4 +73,19 @@ const { data } = Astro.props;
   .outline-btn:focus {
     outline-color: hsl(var(--clr-grey));
   }
+
+  @media (max-width: 600px) {
+    div {
+      width: 90%;
+
+      margin-inline: auto;
+    }
+    .headline {
+      font-size: 45px;
+      line-height: 45px;
+    }
+    p {
+      width: 80%;
+    }
+  }
 </style>
