--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,9 @@
 // components imports
 import About from "../components/About.astro";
 import Card from "../components/Card.astro";
+import Event from "../components/Event.astro";
 import Hero from "../components/Hero.astro";
+import Newsletter from "../components/Newsletter.astro";
 // layouts
 import MainLayout from "../layouts/MainLayout.astro";
 ---
@@ -11,4 +13,6 @@ import MainLayout from "../layouts/MainLayout.astro";
   <Hero />
   <About />
   <Card />
+  <Event />
+  <Newsletter />
 </MainLayout>
