home page title update

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -5,7 +5,7 @@ import HeadLayout from "./HeadLayout.astro";
 ---
 
 <html lang="en">
-  <HeadLayout title={"ELARA 🍔 OUTSTANDING EUROPEAN CUISINE"} />
+  <HeadLayout title={"Elara 🍔"} />
   <body>
     <Navbar />
     <main>
