--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -49,8 +49,36 @@ const data = {
     .hero {
       width: 100%;
       min-height: 70vh;
+      position: relative;
+    }
+    .hero::after {
+      background: linear-gradient(
+        45deg,
+        hsla(var(--clr-red), 0.5),
+        hsla(var(--clr-green), 0.5),
+        hsla(var(--clr-blue), 0.5)
+      );
+      position: absolute;
+      content: "";
+      inset: 0;
+      height: 90%;
+      z-index: -1;
+      background-size: 400%;
+      animation: gradient 15s ease infinite;
+    }
+    @keyframes gradient {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
     }
     .gradient-img {
+      display: none;
     }
   }
 </style>
