--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -105,6 +105,9 @@ import { nav } from "../data/data";
     .logo-img {
       width: 80px;
     }
+    li > a {
+      font-size: var(--fs-xl);
+    }
   }
 </style>
 
