--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -43,7 +43,7 @@ import Title from "./Title.astro";
     flex-wrap: wrap;
   }
   input[type="email"] {
-    border: 0;
+    border: 1px solid hsl(var(--clr-grey), 0.5);
     background-color: hsl(var(--clr-blue));
     padding: 22px 62px;
     border-radius: 80px;
