--- a/src/components/Food.astro
+++ b/src/components/Food.astro
@@ -17,6 +17,11 @@ import FoodCard from "./FoodCard.astro";
 </section>
 
 <style>
+  .food-menu-section {
+    min-height: 100vh;
+    padding: 4rem 0;
+    margin-top: 2rem;
+  }
   .food-section-img {
     width: 80%;
     margin-inline: auto;
