--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,7 +22,7 @@
 <style>
   footer {
     background: url(./gradient.svg);
-    height: 60vh;
+    min-height: 40vh;
     width: 100%;
   }
   .footer-nav {
