--- a/src/layouts/HeroLayout.astro
+++ b/src/layouts/HeroLayout.astro
@@ -73,6 +73,10 @@ const { data } = Astro.props;
 
     p {
       width: 80%;
+      display: none;
+    }
+    .outline-btn {
+      padding: 15px 30px;
     }
   }
 </style>
