--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,10 +2,11 @@
 import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
 import HeadLayout from "./HeadLayout.astro";
+const { title } = Astro.props;
 ---
 
 <html lang="en">
-  <HeadLayout title={"Elara The Italian Cusin Restaurent"} />
+  <HeadLayout {title} />
   <body>
     <Navbar />
     <main>
