--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -24,6 +24,9 @@ html:focus-within {
 html,
 body {
   height: 100%;
+  width: 100%;
+  max-width: 1440px;
+  margin-inline: auto;
 }
 
 /* Set core body defaults */
