--- a/src/components/Event.astro
+++ b/src/components/Event.astro
@@ -5,8 +5,8 @@ import Title from "./Title.astro";
 ---
 
 <section class="events" aria-label="Events">
-  <p class="event-title">WEDDINGS & EVENTS</p>
   <Title title={"CATERING FOR YOUR WEDDINGS & EVENTS"} />
+
   <Button text={"book a catering"} path="/" a={true} button={false} />
   <Slider />
 </section>
@@ -21,5 +21,16 @@ import Title from "./Title.astro";
     justify-content: center;
     align-items: center;
     gap: 20px;
+    min-height: 100vh;
+    padding-block: 4rem;
+  }
+
+  @media (max-width: 600px) {
+    .events {
+      flex-direction: column-reverse;
+    }
+    p {
+      display: none;
+    }
   }
 </style>
