--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -15,12 +15,12 @@ const { title } = Astro.props;
     text-align: center;
     width: 80%;
     margin-inline: auto;
-    font-weight: 400;
+    font-weight: 600;
   }
 
   @media (max-width: 600px) {
     .title {
-      font-size: 38px;
+      font-size: var(--fs-semi);
       line-height: 38px;
     }
   }
