--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,18 @@
 ---
 // components imports
 import About from "../components/About.astro";
-import Card from "../components/Card.astro";
 import Event from "../components/Event.astro";
-import Hero from "../components/Hero.astro";
+import Main from "../components/Main.astro";
 import Newsletter from "../components/Newsletter.astro";
 // layouts
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MainLayout>
-  <Hero />
+<MainLayout title={"Elara The Italian Cusin Restaurent"}>
+  <!-- <Hero /> -->
+  <Main />
   <About />
-  <Card />
+
   <Event />
   <Newsletter />
 </MainLayout>
