--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -63,5 +63,6 @@ import { sliderData } from "../data/data";
       nextEl: ".swiper-button-next",
       prevEl: ".swiper-button-prev",
     },
+    autoplay: true,
   });
 </script>
