working on other page

--- a/src/components/Food.astro
+++ b/src/components/Food.astro
@@ -8,7 +8,7 @@ import FoodCard from "./FoodCard.astro";
 <section class="food-menu-section">
   <div class="food-menu-header">
     <div class="headline food-menu-title">Our Menu</div>
-    <Image src={bg} alt="" class="food-section-img" />
+    <Image src={bg} alt="" class="food-section-img" typeof="avif" />
   </div>
 
   <div class="food-card-container">
