--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,10 @@ import Newsletter from "../components/Newsletter.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MainLayout title={"Elara The Italian Cusin Restaurent"}>
+<MainLayout
+  title={"Elara The Italian Cusin Restaurent"}
+  text={"contact"}
+  path="/contact">
   <!-- <Hero /> -->
   <Main />
   <About />
