--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -3,6 +3,6 @@ import Food from "../components/Food.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MainLayout>
+<MainLayout text={"contact"} path="/contact">
   <Food />
 </MainLayout>
