--- a/src/pages/reservation.astro
+++ b/src/pages/reservation.astro
@@ -3,6 +3,6 @@ import Booking from "../components/Booking.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MainLayout title={"Book Your Table"}>
+<MainLayout title={"Book Your Table"} text={"read our blogs"} path="/blog">
   <Booking />
 </MainLayout>
