--- a/src/components/Booking.astro
+++ b/src/components/Booking.astro
@@ -30,9 +30,9 @@
 
 <style>
   .booking {
-    padding-block: 4rem;
+    padding-block: 6rem;
     min-height: 100vh;
-    margin-top: 2rem;
+    margin-bottom: 2rem;
   }
   form {
     display: flex;
