--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -39,7 +39,7 @@ const data = {
       <p>since 1960,mardrid,spain</p>
       <div class="line"></div>
     </div>
-    <a href="outline-btn" class="outline-btn">Book a table</a>
+    <a href="/reservation" class="outline-btn">Book a table</a>
   </div>
 </section>
 
