--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -82,6 +82,9 @@
     border: 1px solid hsl(var(--clr-grey-400));
   }
   @media (max-width: 600px) {
+    .newsletter {
+      min-height: 100%;
+    }
     .container {
       width: 90%;
     }
